init settings vscode for c++ cmake msvs

--- a/ini_parser/CMakeLists.txt
+++ b/ini_parser/CMakeLists.txt
@@ -1,20 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
-project(IniParser)
+cmake_minimum_required(VERSION 3.10.0)
+project(IniParser VERSION 0.1.0 LANGUAGES C CXX)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-enable_testing()
-
-add_library(ini_parser
-    src/IniParser.cpp
-    src/IniFileReader.cpp
-    src/IniSyntaxValidator.cpp
-)
-
-target_include_directories(ini_parser PUBLIC include)
-
-add_executable(ini_parser_main src/main.cpp)
-target_link_libraries(ini_parser_main ini_parser)
-
-add_subdirectory(tests)
+add_executable(ini_parser_main main.cpp)
