--- a/ini_parser/.vscode/settings.json
+++ b/ini_parser/.vscode/settings.json
@@ -1,4 +1,22 @@
 {
     "cmake.generator": "Visual Studio 17 2022",
-    "cmake.configureOnOpen": true
+    "cmake.configureOnOpen": true,
+    "files.associations": {
+        "ostream": "cpp",
+        "print": "cpp"
+    },
+    "files.encoding": "utf8bom",
+    "files.autoGuessEncoding": true,
+    "terminal.integrated.profiles.windows": {
+        "PowerShell": {
+            "source": "PowerShell",
+            "args": ["-NoExit", "-Command", "chcp 65001"]
+        }
+    },
+    "terminal.integrated.defaultProfile.windows": "PowerShell",
+    "cmake.parallelJobs": 4,
+    "C_Cpp.default.cppStandard": "c++23",
+    "[cpp]": {
+        "editor.quickSuggestions": true
+    }
 }
