--- a/ini_parser/CMakeLists.txt
+++ b/ini_parser/CMakeLists.txt
@@ -1,4 +1,14 @@
-cmake_minimum_required(VERSION 3.10.0)
+cmake_minimum_required(VERSION 3.16)
 project(IniParser VERSION 0.1.0 LANGUAGES C CXX)
 
-add_executable(ini_parser_main main.cpp)
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+option(BUILD_EXAMPLES "Build examples" ON)
+
+add_subdirectory(src)
+
+if(BUILD_EXAMPLES)
+    add_subdirectory(examples)
+endif()
