--- a/ini_parser/.vscode/settings.json
+++ b/ini_parser/.vscode/settings.json
@@ -3,24 +3,89 @@
     "cmake.configureOnOpen": true,
     "files.associations": {
         "ostream": "cpp",
-        "print": "cpp"
+        "print": "cpp",
+        "xstring": "cpp",
+        "algorithm": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "cctype": "cpp",
+        "charconv": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "exception": "cpp",
+        "format": "cpp",
+        "fstream": "cpp",
+        "initializer_list": "cpp",
+        "ios": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "iterator": "cpp",
+        "limits": "cpp",
+        "locale": "cpp",
+        "map": "cpp",
+        "memory": "cpp",
+        "new": "cpp",
+        "optional": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "string": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "typeinfo": "cpp",
+        "utility": "cpp",
+        "vector": "cpp",
+        "xfacet": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocbuf": "cpp",
+        "xlocinfo": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
+        "xmemory": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
     },
     "files.encoding": "utf8",
     "files.autoGuessEncoding": true,
     "terminal.integrated.profiles.windows": {
         "PowerShell": {
             "source": "PowerShell",
-            "args": ["-NoExit", "-Command", "chcp 65001"]
+            "args": [
+                "-NoExit",
+                "-Command",
+                "chcp 65001"
+            ]
         }
     },
     "terminal.integrated.defaultProfile.windows": "PowerShell",
     "cmake.parallelJobs": 4,
     "C_Cpp.default.cppStandard": "c++23",
+    "[c]": {
+        "editor.defaultFormatter": "ms-vscode.cpptools"
+    },
     "[cpp]": {
+        "editor.defaultFormatter": "ms-vscode.cpptools",
         "editor.quickSuggestions": {
             "comments": "on",
             "strings": "on",
             "other": "on"
         }
-    }
+    },
+    "editor.formatOnSave": true,
+    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 80 }"
 }
