--- a/ini_parser/.vscode/settings.json
+++ b/ini_parser/.vscode/settings.json
@@ -87,5 +87,7 @@
         }
     },
     "editor.formatOnSave": true,
-    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 80 }"
+    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 80 }",
+    "C_Cpp.errorSquiggles": "disabled",
+    "C_Cpp.default.compilerPath": "cl.exe"
 }
