--- a/ini_parser/tests/CMakeLists.txt
+++ b/ini_parser/tests/CMakeLists.txt
@@ -10,6 +10,8 @@ target_link_libraries(ini_tests
         GTest::gtest_main
 )
 
+file(COPY test_data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 add_test(NAME ini_parser_tests COMMAND ini_tests)
 
 target_include_directories(ini_tests
